--- a/src/pages/Sidebarcomponent/head.css
+++ b/src/pages/Sidebarcomponent/head.css
@@ -1,10 +1,11 @@
 .head{
     
-    width: 82.1%;
+    width: 100vw;
     height: 120px;
-    background-color: #012A4A;
+    background-color: #062c49e9;
     right: 0px;
     position: absolute;
+    
     
 }
 
